--- a/front/src/container/balance/index.css
+++ b/front/src/container/balance/index.css
@@ -101,6 +101,21 @@
     font-size: 14px;
 }
 
+.trans__items
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.trans__scrollbar {
+    padding-right: 15px;
+    max-height: 700px;
+    overflow-y: scroll;
+}
+
 .trans__item {
     display: flex;
     width: 100%;
