--- a/front/src/container/notifications/index.css
+++ b/front/src/container/notifications/index.css
@@ -9,6 +9,21 @@
     padding: 16px;
 }
 
+.notification__items
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+}
+
+.notification__scrollbar {
+    padding-right: 10px;
+    max-height: 700px;
+    overflow-y: scroll;
+}
+
 .notification__item {
     display: flex;
     width: 100%;
